Fixed spacing at the bottom of C blocks

--- a/client/static/app.css
+++ b/client/static/app.css
@@ -1207,6 +1207,9 @@
 .d-block-c > .d-block-stack {
     position: relative;
 }
+.d-block-c-end {
+    height: 6px;
+}
 
 /* ----------------------------- */
 
